--- a/cliente/index.html
+++ b/cliente/index.html
@@ -31,6 +31,7 @@
         <link rel="import" href="pages/second-page.html">
         <link rel="import" href="pages/search-page.html">
         <link rel="import" href="pages/profile-page.html">
+        <link rel="import" href="pages/signoff-page.html">
 
     </head>
     <body unresolved fullbleed>
