--- a/cliente/main-menu.html
+++ b/cliente/main-menu.html
@@ -16,7 +16,7 @@
                 border-bottom-right-radius: 2px;
                 border-bottom-left-radius: 2px;
                 box-shadow: rgba(0, 0, 0, 0.0980392) 0px 2px 4px, rgba(0, 0, 0, 0.0980392) 0px 0px 3px;
-                background-image: url(Icarus.png);
+                background-image: url(img/Icarus.png);
                 background-size: 100% 100%;
                 background-repeat: no-repeat;
             }
@@ -25,14 +25,15 @@
                 height: 5%;
                 color: rgb(255, 255, 255);
                 box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 2px;
-                background-color: rgb(122, 179, 234);
+                background-color: #3f7eaa;
             }
-
+            paper-tabs#paper_tabs /deep/ #ink{
+              color: #4996CC;
+            }
             #paper_radio_button1 {
                 left: 1250px;
                 top: 490px;
             }
-
             template {
                 display: none !important;
             }
