--- a/cliente/pages/second-page.html
+++ b/cliente/pages/second-page.html
@@ -11,46 +11,80 @@
         border-top-right-radius: 2px;
         border-bottom-right-radius: 2px;
         border-bottom-left-radius: 2px;
-        box-shadow: rgba(0, 0, 0, 0.0980392) 0px 2px 4px, rgba(0, 0, 0, 0.0980392) 0px 0px 3px;
+        box-shadow: rgba(0, 0, 0, 0.0980392) 8px 8px 8px, rgba(0, 0, 0, 0.0980392) 2px 8px 8px;
         padding: 20px;
         margin: 50px 30px;
-        background-color: rgb(246, 255, 34);
+        background-color: #3f7eaa;
+        border-radius: 5px;
       }
       #username {
-        margin: 20px;
-        background-color: rgb(252, 246, 246);
+        margin-bottom: 30px;
+        width: 95%;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 5px;
+        font-size: 15px;
+        background-color: rgb(249, 246, 246);
       }
       #passwd {
-        background-color: rgb(255, 248, 248);
+
+        width: 95%;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 5px;
+        font-size: 15px;
+        background-color: rgb(249, 246, 246);
       }
-      #mail {
-        margin: 20px;
-        background-color: rgb(253, 247, 247);
+      #email {
+        margin-bottom: 30px;
+        width: 95%;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 5px;
+        font-size: 15px;
+        background-color: rgb(249, 246, 246);
       }
-      #mail2 {
-        background-color: rgb(252, 250, 250);
+      #email2 {
+
+        width: 95%;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 5px;
+        font-size: 15px;
+        background-color: rgb(249, 246, 246);
       }
-      #paper_button1 {
-        margin: 20px;
-        width: 70px;
-        height: 30px;
-      }
-      #core_input {
-        visibility:hidden;
-        color: rgb(255, 0, 0);
-        margin-left: 50%;
+      #enter {
+        margin-top: 10px;
         margin-bottom: 10px;
+        padding-top: 5px;
+        width: 100%;
+        height: 30px;
+        color: rgb(255, 255, 255);
+      }
+      #invalid{
+        visibility:hidden;
+        color: black;
+        margin-bottom: 10px;
+        text-align: center;
+      }
+      core-input#invalid /deep/ input{
+        text-align: center;
+      }
+      p{
+        font-size: 80%;
+        margin-bottom: 15px;
       }
 
     </style>
     <user-model id="userModel"></user-model>
     <core-card id="core_card2" layout vertical center>
-      <paper-input label="User..." willvalidate validationmessage="Completa este campo" required invalid id="username" layout vertical class="invalid" on-blur="{{checkNameExists}}" on-keyup="{{ keypressHandler }}" ></paper-input>
-      <core-input readonly inputvalue="Invalid user or password" value="User already exists" id="core_input"></core-input>
-      <paper-input label="Password..." willvalidate validationmessage="Completa este campo" required invalid id="passwd" layout vertical class="invalid" on-keyup="{{ keypressHandler }}" ></paper-input>
-      <paper-input label="Email..." willvalidate validationmessage="Completa este campo"  id="mail" layout vertical class="invalid" on-keyup="{{ keypressHandler }}" ></paper-input>
-      <paper-input label="Repeat Email..." willvalidate validationmessage="Completa este campo" id="mail2" layout vertical class="invalid" on-keyup="{{ keypressHandler }}" ></paper-input>
-      <paper-button label="Send" id="paper_button1" on-tap="{{keypressHandler}}" center center-justified ></paper-button>
+      <paper-input label="User..." id="username" layout vertical on-blur="{{checkNameExists}}" on-keyup="{{ keypressHandler }}" ></paper-input>
+      <paper-input type="password" label="Password..." id="passwd" layout vertical on-keyup="{{ keypressHandler }}" ></paper-input>
+      <p>Password must constains letters and numbers</p>
+      <paper-input label="Email..." id="email" layout vertical on-keyup="{{ keypressHandler }}" ></paper-input>
+      <paper-input label="Repeat Email..." id="email2" layout vertical on-keyup="{{ keypressHandler }}" ></paper-input>
+      <paper-button label="Send" id="enter" on-tap="{{keypressHandler}}" center center-justified ></paper-button>
+      <div><core-input center-justified readonly value="" id="invalid"></core-input></div>
     </core-card>
   </template>
   <script>
@@ -59,12 +93,23 @@
         if (this.checkNameExists(this.$.username.value)) {
           var user = {
             username: this.$.username.value,
-            passwd: this.$.passwd.value
+            passwd: this.$.passwd.value,
+            email: this.$.email.value
           };
 
-          this.$.userModel.saveUser(JSON.stringify(user));
+          var result = this.$.userModel.saveUser(JSON.stringify(user));
+          if (result) {
+            this.$.invalid.style.visibility = "visible";
+            this.$.invalid.value = "User created successfully";
+            this.$.invalid.style.color = "white";
+          } else {
+            this.$.invalid.style.visibility = "visible";
+            this.$.invalid.value = "Cannot create user";
+            this.$.invalid.style.color = "white";
+          }
         } else {
-          this.$.core_input.style.visibility = "visible";
+          this.$.invalid.style.visibility = "visible";
+          this.$.invalid.value = "User already exists";
         }
       },
       checkNameExists: function () {
@@ -73,23 +118,22 @@
       keypressHandler: function (event, detail, sender) {
         var code = event.keyCode;
         var username = this.$.username.value;
+        this.$.invalid.style.visibility = "hidden";
 
         if (code == 13 || sender.id == "enter") {
-          if (this.validateUser() && this.validatePass()) {
-
-            this.comprobateUser();
-
-
-          } else {
-            console.log("error");
-
+          if (this.validateUser() && this.validatePass() && this.validateEmail() && this.verifyEmail(this.$.email2.value)) {
+            this.handleSaveUser();
+          } else if (!this.validateUser()) {
+            this.$.invalid.style.visibility = "visible";
+            this.$.invalid.value = "Invalid user";
+          } else if (!this.validatePass()) {
+            this.$.invalid.style.visibility = "visible";
+            this.$.invalid.value = "Invalid password";
+          } else if (!this.validateEmail()) {
+            this.$.invalid.style.visibility = "visible";
+            this.$.invalid.value = "Invalid e-mail";
           }
-
         }
-      },
-      comprobateUser: function () {
-        this.handleSaveUser();
-
       },
       validateUser: function () {
         var username = this.$.username.value;
@@ -100,11 +144,20 @@
         var password = this.$.passwd.value;
         return this.validateField(password, /(?!^[0-9]*$)(?!^[a-zA-Z]*$)^([a-zA-Z0-9]{6,16})$/);
       },
+      validateEmail: function () {
+        var string = this.$.email.value;
+        return this.validateField(string, /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/);
+      },
       validateField: function (string, pattern) {
-
         return string.match(pattern) !== null;
-
-
+      },
+      verifyEmail: function (email) {
+        if (this.$.email.value == email) {
+          return true;
+        } else {
+          this.$.invalid.style.visibility = "visible";
+          this.$.invalid.value = "The emails don't match";
+        }
       }
     });
   </script>
